Re-configuring project's .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -86,8 +86,12 @@ celerybeat-schedule
 .venv
 venv/
 ENV/
-share/
 bin/
+include/
+lib/
+lib64/
+share/
+.pyenv.cfg
 
 # Spyder project settings
 .spyderproject
